public/css/components/header.css
/**
 * Header Component Styles
 * 
 * @package Genpedia
 * @author franzxml
 */

.header {
    background-color: #F4F5F6;
    padding: 20px 0;
    width: 100%;
}

.header-container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 20px;
}

.header-logo {
    height: 40px;
    width: auto;
    display: block;
}

